# pipeline-coach

./: .env.example  .gitignore  CUSTOMER_BRIEF.md  Dockerfile  LICENSE  PIPELINE_COACH_SPEC.md  README.md  docker-compose.yml  pyproject.toml
config/: escalation.yaml  rules.yaml
docs/design/: 2026-03-30-pipeline-coach-design.md  2026-03-31-mcp-server-design.md
docs/diagrams/: pipeline-coach-architecture-exec.html  pipeline-coach-architecture.html
docs/plan/: 2026-03-30-pipeline-coach.md  2026-03-31-mcp-server.md
pipeline_coach/: __main__.py  config.py  dashboard.py  models.py  run_once.py  scheduler.py  show_recent.py  smoke_test.py
pipeline_coach/coach/: actions.py  brief.py  quality_gate.py
pipeline_coach/delivery/: email_client.py  router.py
pipeline_coach/hygiene/: priority.py  rules.py
pipeline_coach/ingestion/: normalizer.py  twenty_client.py
pipeline_coach/mcp/: __main__.py  helpers.py  server.py  tools.py
pipeline_coach/observability/: logger.py
pipeline_coach/workflow/: graph.py  state.py
scripts/: install_mcp.py  seed_twenty.py
tests/: conftest.py  test_actions.py  test_audit.py  test_brief.py  test_config.py  test_email_client.py  test_mcp_helpers.py  test_mcp_tools.py  test_models.py  test_normalizer.py  test_priority.py  test_quality_gate.py  test_router.py  test_rules.py  test_twenty_client.py  test_workflow.py
